working multiple users

--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,10 @@
 		<title>Exercise Data</title>
 	</head>
   <body>
-    <!--
-    <div class="container">
-      <div class="navbar navbar-default row">
-        <ul class="nav navbar-nav">
-          <li class='active'><a href="">Workout Tracker</a></li>
-        </ul>
-      </div>
-    </div>
-  -->
-
+    <div id="navbar-mount"></div>
     <div id='workout-view-mount'></div>
+    <div id="login-modal-mount"></div>
+    <div id="register-modal-mount"></div>
     <br>
     <br>
     <div id='workout-picker-view-mount'></div>
